--- a/app/src/main/res/layout/rastreio.xml
+++ b/app/src/main/res/layout/rastreio.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.metodista.ads.fretesuite.ConfiguracoesActivity"
-    tools:showIn="@layout/configuracoes">
+    tools:context="br.metodista.ads.fretesuite.RastreioActivity"
+    tools:showIn="@layout/rastreio">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             <TextView
                 android:layout_width="340dp"
                 android:layout_height="20dp"
-                android:text="Cep de Origem"
+                android:text="Descrição"
                 />
 
         </LinearLayout>
@@ -39,6 +39,35 @@
                 android:inputType="text"
                 />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal" >
+
+            <TextView
+                android:layout_width="340dp"
+                android:layout_height="20dp"
+                android:text="Código de Rastreio"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:gravity="center_horizontal" >
+
+            <EditText
+                android:id="@+id/InputObjeto"
+                android:layout_width="340dp"
+                android:layout_height="20dp"
+                android:inputType="text"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
