--- a/app/src/main/res/layout/rastreio.xml
+++ b/app/src/main/res/layout/rastreio.xml
@@ -24,21 +24,14 @@
                 android:text="Descrição"
                 />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:gravity="center_horizontal" >
 
             <EditText
-                android:id="@+id/InputCep"
+                android:id="@+id/InputDescricao"
                 android:layout_width="340dp"
-                android:layout_height="20dp"
+                android:layout_height="wrap_content"
                 android:inputType="text"
                 />
-        </LinearLayout>
+            </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,28 +39,22 @@
             android:layout_marginTop="10dp"
             android:gravity="center_horizontal" >
 
-            <TextView
-                android:layout_width="340dp"
-                android:layout_height="20dp"
-                android:text="Código de Rastreio"
-                />
+                <TextView
+                    android:layout_width="340dp"
+                    android:layout_height="wrap_content"
+                    android:text="Código de Rastreio"
+                    />
+
+
+
+                <EditText
+                    android:id="@+id/InputObjeto"
+                    android:layout_width="340dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:gravity="center_horizontal" >
-
-            <EditText
-                android:id="@+id/InputObjeto"
-                android:layout_width="340dp"
-                android:layout_height="20dp"
-                android:inputType="text"
-                />
-        </LinearLayout>
-
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
