--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,8 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_rastreio"
-            android:title="Rastreio de Encomendas" />
+            android:title="Rastreio de Encomendas"
+            android:onClick="mostrarMain" />
         <item
             android:id="@+id/nav_calcular"
             android:title="Calcular Frete" />
@@ -13,7 +14,8 @@
             android:title="Procurar Endereço" />
         <item
             android:id="@+id/nav_preferenciais"
-            android:title="Clientes Preferenciais" />
+            android:title="Clientes Preferenciais"
+            android:onClick="mostrarClientes"/>
         <item
             android:id="@+id/nav_configuracoes"
             android:title="Configurações" />
