--- a/app/src/main/res/layout/rastreio.xml
+++ b/app/src/main/res/layout/rastreio.xml
@@ -1,49 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:gravity="center_horizontal" >
+
+        <ListView
+            android:id="@+id/listaProdutos"
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:gravity="center_horizontal" >
-
-            <TextView
-                android:layout_width="340dp"
-                android:layout_height="20dp"
-                android:text="Descrição"
-                />
-
-
-            <EditText
-                android:id="@+id/InputDescricao"
-                android:layout_width="340dp"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                />
-            </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_horizontal" >
-
-                <TextView
-                    android:layout_width="340dp"
-                    android:layout_height="wrap_content"
-                    android:text="Código de Rastreio"
-                    />
-
-
-
-                <EditText
-                    android:id="@+id/InputObjeto"
-                    android:layout_width="340dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    />
-
-        </LinearLayout>
+            android:layout_height="wrap_content" >
+        </ListView>
     </LinearLayout>
+
+</LinearLayout>
